# glue-devcontainer-template

./: .env.example  .flake8  .gitignore  LICENSE  README.md  poetry.toml  pyproject.toml
.devcontainer/: .bashrc  Dockerfile  devcontainer.json  post-attach.sh  post-create.sh
src/: sample.py
tests/: test_sample.py
